style.css
body,
html {
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: "Open Sans", sans-serif;
}

html {
  scroll-behavior: smooth;

}

body {
overflow-x: hidden;
}

body::before {
  content: "";
  position: absolute;
  background: url(img/laptop.jpg) no-repeat bottom fixed;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  width: 100%;
  height: 100%;
  z-index: -1;
}

h1,
h2 {
  color: white;
  font-size: 2rem;
}

h2 {
  font-size: 3rem;
}

h1 {
  font-weight: 800;
}

.main {
  padding-bottom: 20px;
  list-style: none;
  display: flex;
  flex-direction:column;
  justify-content: center;
  align-items: center;
  padding-top:120px;
  font-size:22px;
  width: 100%;
  height: auto;
}

ul {
  padding: 0;
  margin: 0;
}

li {
  padding: 20px;
  padding-bottom: 0;
  color: azure;
}

li > a {
  position: relative;
  color: white;
  text-decoration: none;
}

li > a:hover {
  color: white;
}

li > a::before {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: white;
  transform: scaleX(0);
  transition: transform 0.3s ease;
}

li > a:hover::before {
  transform: scaleX(1);
}

.container {
  
  width: 100%;
  height: 100%;
}


.content {
  background-color:black;
}

.contact {
  background-color:#131c29;
}
.content > .container {
  padding-top: 2rem;
}

.circle {
  padding-bottom:25px;
}

.circle > img {
  width: 150px;
  text-align: center;
  border-radius: 50%;
  border: 3px solid white;

}

.content > img {
  width: 100%;
  height: auto;
}

.content {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-content: center;
  align-content: center;
}

.content > img {
  width:100%;
  height:100%;
  object-fit:cover;
}

.strelica {
  position:absolute;
  color:white;
  left:50%;
  top:90%;
  animation:animiraj 2s infinite;
}

@keyframes animiraj {
0% {
  top:90%;
}
50% {
 top:92%;
}
100% {
  top:93%;
  opacity:0;
}
}

.mob-nav {
  position:fixed;
  background-color:rgb(11, 0, 47);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
  top:0;
  transform: translateX(100%);
  right:0;
  left:1;
  width:35%;
  min-height:100vh;
  z-index:98;
  transition:0.4s;
 
}

.git_li {
  position:absolute;
  top:90%;
  color:white
}

.git_li > a > li {
  margin-left:50px;
}

.git_li a {
  color:white;
  transition:0.4s;
} 
.git_li a:nth-child(1):hover {
  color:#0077B5;
} 
.git_li a:nth-child(2):hover {
  color:orange;
} 

.git_li a:nth-of-type(2) {
  margin-left:15px;
}

.mob-nav.is-active {
  transform: translateX(0);
  right:0;
}
.hamburger {
  font-size:25px;
  position:fixed;
  top:5%;
  left:95%;
  display:block;
  cursor:pointer;
  color:white;
  z-index:99;
}
@media screen and (min-width: 320px) and (max-width: 480px) {
  .mob-nav {
    width:50%;
  }

  }


@media only screen and (max-width: 768px) {

  body::before {
    background-position: center bottom;
  }

  h2 {
    font-size:24px;
  }
  .content {
    display: block;
    grid-template-columns: 1fr;
  }
  .hamburger {
    left:85%;
  }
}

.zone > h2,
p {
  padding: 30px;
  color: white;
}

#particles-js {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 100vh;
  background: radial-gradient(
    farthest-side at 73% 21%,
    transparent,
    rgba(26, 29, 41, 0.712)
  );
}

.grid-wrapper {
  padding: 50px;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  background-color:#131c29;
}
.portfolio_item > img {
  width: 100%;
  border-radius: 2%;
}

.portfolio_item {
  position: relative;
  margin: 20px;
  box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px,
    rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
  cursor: pointer;
}

.portfolio_item::after {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  background: radial-gradient(farthest-side at 80% 21%, transparent, #000000);
  position: absolute;
  transition: 1s;
  top: 0;
  left: 0;
  opacity: 0.7;
}

.portfolio_item:hover {
  transform: scale(1.1) translateZ(0px);
  transition-duration: 300ms;
  transition-timing-function: ease-out;
  filter: grayscale(0);
}

.portfolio_item:hover::after {
  opacity: 0;
}

.radial-menu {
  
  position: relative;
  top:5%;
  width: var(--radial-width);
  height: var(--radial-height);
  margin: 0 auto;  
  animation: rotateWheel 20s linear infinite;
  z-index:1;

}

.radial-menu::before {
  content: '';
  position: absolute;
  width: 80%;
  height: 80%;
  border-radius: 50%;
  top: 10%;
  left: 10%;
  
}

.radial-menu div {
  position: absolute;
  width: var(--radial-item-w);
  height: var(--radial-item-h);;
  font-size: 2.5rem;
  text-align: center;
  line-height: 100px;
  border-radius: 50%;
  transition: all 0.2s ease-in-out;
  
}

.radial-menu-item {
  display: flex;
  align-items: center;
  justify-content: center;
  transform: rotate(0deg);
  }
.radial-item-btn-1 {
  top: 0px;
  left: var(--radial-helper-center);
  animation: rotateWheel1 20s linear infinite;
  
}

.radial-item-btn-2 {
  top: var(--radial-helper-t-tp);
  left: var(--radial-helper-w-rp);
  animation: rotateWheel1 20s linear infinite;

}

.radial-item-btn-3 {
  top: var(--radial-helper-t-bp);
  left: var(--radial-helper-w-rp);
  animation: rotateWheel1 20s linear infinite;

}

.radial-item-btn-4 {
  top: var(--radial-height-diff);
  left: var(--radial-helper-center);
  animation: rotateWheel1 20s linear infinite;

}

.radial-item-btn-5 {
  top: var(--radial-helper-t-bp);
  left: var(--radial-helper-w-lp);
  animation: rotateWheel1 20s linear infinite;

}

.radial-item-btn-6 {
  top: var(--radial-helper-t-tp);
  left: var(--radial-helper-w-lp);
  animation: rotateWheel1 20s linear infinite;

}

.bg-img {
  background-image: url('img/PZW-ART.jpg');
  background-size: cover;
  background-position: center;
}

@keyframes rotateWheel {
  from {transform: rotate(0deg);}
  to {transform: rotate(360deg);}
}

@keyframes rotateWheel1 {
  from {transform: rotate(360deg);}
  to {transform: rotate(0deg);}
}

.forma {
  display:grid;
  grid-template-columns: 1fr;
  width:100%;
  padding:50px;
}

.forma > h2 {

  padding-bottom:0 0 10px 0;

}

.form-control {
  border-radius: 0;
}


footer {
  display:flex;
  justify-content:center;
  align-items:center;
  background-color:black;
  padding:15px;

}

footer > span {
  color:white;
}

footer > span > a {
  color:white;
  text-decoration:none;
  transition:0.4s;
}

span > a:hover {
  color:orange;
}

